src/tests/snapshots/scl__tests__runtime@structs.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/structs.scl
---
exit status: 6
