src/tests/snapshots/scl__tests__runtime@while.scl-2.snap
---
source: src/tests/mod.rs
expression: stdout
input_file: src/tests/sources/runtime/while.scl
---
10
