src/tests/snapshots/scl__tests__runtime@while.scl-4.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/runtime/while.scl
---
exit status: 0
