src/tests/snapshots/scl__tests__snapsnot_testing-2.snap
---
source: src/tests/mod.rs
expression: code
input_file: src/tests/sources/proc_return_implicit.scl
---
export function w $add(w %a, w %b) {
@start
	%.ss.0 =l alloc4 4
	%.ss.1 =l alloc4 4
	storew %a, %.ss.0
	storew %b, %.ss.1
@body
	%sv.1 =w loadw %.ss.0
	%sv.2 =w loadw %.ss.1
	%binop.3 =w add %sv.1, %sv.2
	ret %binop.3
}
export function w $main() {
@start

@body
	ret 123
}
