src/tests/snapshots/scl__tests__snapsnot_testing-3.snap
---
source: src/tests/mod.rs
expression: stdout
input_file: src/tests/sources/proc_return_implicit.scl
---

