src/tests/snapshots/scl__tests__snapsnot_testing@assignment.scl-2.snap
---
source: src/tests/mod.rs
expression: code
input_file: src/tests/sources/assignment.scl
---
export function w $add(w %a, w %b) {
@start
	%.ss.0 =l alloc4 4
	%.ss.1 =l alloc4 4
	storew %a, %.ss.0
	storew %b, %.ss.1
@body
	%sv.1 =w loadw %.ss.0
	%sv.2 =w loadw %.ss.1
	%binop.3 =w add %sv.1, %sv.2
	ret %binop.3
}
export function w $main() {
@start
	%.ss.0 =l alloc4 4
@body
	storew 10, %.ss.0
	%.offset.4 =l add %.ss.0, 0
	storew 20, %.offset.4
	%sv.5 =w loadw %.ss.0
	ret %sv.5
}
