src/tests/snapshots/scl__tests__snapsnot_testing@assignment.scl-5.snap
---
source: src/tests/mod.rs
expression: run_cmd.status
input_file: src/tests/sources/assignment.scl
---
exit status: 20
