src/tests/snapshots/scl__tests__snapsnot_testing@assignment.scl.snap
---
source: src/tests/mod.rs
expression: checked_main_package
input_file: src/tests/sources/assignment.scl
---
CheckedPackage {
    package_id: ModuleId(
        3,
    ),
    units: [
        CheckedTranslationUnit {
            procs: [
                CheckedProc {
                    name: "main",
                    type_id: TypeId(
                        9,
                    ),
                    body: CheckedBlock {
                        stmts: [
                            VariableDeclaration {
                                stack_slot: StackSlotId(
                                    0,
                                ),
                                value: CheckedExpr {
                                    type_id: TypeId(
                                        2,
                                    ),
                                    lvalue: false,
                                    kind: Number(
                                        10,
                                    ),
                                },
                            },
                            Expr(
                                CheckedExpr {
                                    type_id: TypeId(
                                        2,
                                    ),
                                    lvalue: false,
                                    kind: Assignment {
                                        stack_slot: StackSlotId(
                                            0,
                                        ),
                                        offset: 0,
                                        rhs: CheckedExpr {
                                            type_id: TypeId(
                                                2,
                                            ),
                                            lvalue: false,
                                            kind: Number(
                                                20,
                                            ),
                                        },
                                    },
                                },
                            ),
                        ],
                        last: Some(
                            CheckedExpr {
                                type_id: TypeId(
                                    2,
                                ),
                                lvalue: true,
                                kind: StackValue(
                                    StackSlotId(
                                        0,
                                    ),
                                ),
                            },
                        ),
                        type_id: TypeId(
                            2,
                        ),
                    },
                    params: [],
                    return_type: TypeId(
                        2,
                    ),
                    stack_slots: StackSlots {
                        slots: [
                            TypeId(
                                2,
                            ),
                        ],
                    },
                },
            ],
        },
    ],
}
